@@ -2,7 +2,7 @@ AUX cp.patch 4630 RMD160 3b2ac912745bb3256079a307da932830a577488f SHA1 684ef2ea2
 DIST maven-project-2.1_pre20070611.tar.bz2 145342 RMD160 9f1aa340f4837cfb2f12f2cf9f6022ba3a9d5f07 SHA1 82b9b1bef0c633dd875096fd7ad4755873db0486 SHA256 f43d844a302e03744baffc17e391e257b48537ea050aedcfc769e71bbeab439e
 DIST maven-project-2.1_pre20071021.tar.bz2 150288 RMD160 1c039799e3830fa3576150aea0aedcd99d004eb1 SHA1 d231e0bcbc607beadfe721720881470f57146052 SHA256 023b3818de694b54a120ae42d3644888accb65345af621c51ff8103462107c86
 EBUILD maven-project-2.1_pre20070611.ebuild 1055 RMD160 90beeea5424a72ed8eb0c52e9707fdefafc262b1 SHA1 6515d908fa6f2e86fe6932b1270b4b3fd5cfb301 SHA256 a65e6aa11d30ff0b09ccac3aaa872734545b20c05d65afcbe0231fc87a0e100a
-EBUILD maven-project-2.1_pre20071021.ebuild 1081 RMD160 861a9b9b73955251058c7a0ad84091016c589803 SHA1 34a99e99070edbb82c47f6eaa4174e0a8168e12b SHA256 fd66ffa5484a982c3ee6a6e6080f34821777288915ccd01844393d7d68a62466
-MISC ChangeLog 1163 RMD160 a8c32baf5a981949e1a7c92d8ee72404a591f5c9 SHA1 0f5000bd19182aa3ffb17836178bd2f0fa17f3a5 SHA256 87fea4cebbb6cca62b856c48598d221454f25d1959744bc934a294ca385590db
+EBUILD maven-project-2.1_pre20071021.ebuild 1157 RMD160 a28e1f42ea1708b015e3814a75bb5bf05a49a778 SHA1 b45a79d03f3c5c820d458d3c49b771a868ed3991 SHA256 8b165b4994755c7742ab2e21fe84bb3b7a84da6d043dddc56aa768e1d506ca30
+MISC ChangeLog 1264 RMD160 67858f0ccd2f7f2e292138c14455091dbca9565e SHA1 432e6194c8c5be5ba3a8439ff9a34aae76d90fad SHA256 95eddf80f0cfeabf3121af171eda1201dcbc6a08d4f3a659cccac269c1587802
 MISC digest 0 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 SHA1 da39a3ee5e6b4b0d3255bfef95601890afd80709 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
